<resources>
    <string name="app_name">TareaFinal101224</string>

    <string name="hint_email">Email...</string>
    <string name="hint_password">Contraseña...</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="tv_registrar">Registro directo</string>
    <string name="tv_ubicacion">Nuestra ubicación</string>

    <string name="btn_volver">Volver</string>

    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="btn_salir">Salir de la app</string>
    <string name="btn_web">Navegador web</string>
    <string name="btn_proveedores">Proveedores</string>
    <string name="btn_productos">Productos</string>

    <string name="tv_proveedores">Proveedores</string>
    <string name="btn_nuevo">+ Nuevo</string>
    <string name="btn_portal">Volver al portal</string>
    <string name="btn_update">* Actualizar</string>
    <string name="btn_borrar">- Borrar</string>
    <string name="tv_lista">No hay proveedores en el sistema</string>

    <string name="tv_titulo">Nuevo Proveedor</string>
    <string name="hint_nombre">Nombre...</string>
    <string name="hint_descripcion">Descripción...</string>
    <string name="tv_tipo">Tipo</string>
    <string-array name="tipos">
        <item>Seleccione un tipo...</item>
        <item>Informático</item>,
        <item>Mobiliario</item>,
        <item>Alimentación</item>
    </string-array>
    <string name="tv_ambito">Ámbito</string>
    <string name="rb_publico">Público</string>
    <string name="rb_privado">Privado</string>
    <string name="tv_calificacion">Calificación</string>
    <string name="cb_activo">Activo</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tv_resultado_calificacion">1 estrella/s</string>
    <string name="formato_calificacion">%d estrella/s</string>

    <string name="Activos">Activos</string>
    <string name="Inactivos">Inactivos</string>

    <string name="tv_productos">Productos</string>

    <string name="tv_autor">Hecho por Victoriano García Torrecillas (ViGaTo)</string>
</resources>