<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF9F2"
    tools:context=".PortalActivity">

    <TextView
        android:id="@+id/tv_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/btn_cerrar_sesion"
        app:layout_constraintEnd_toStartOf="@+id/btn_salir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sqlite" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/btn_salir"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cerrar_sesion"
        app:layout_constraintTop_toTopOf="@+id/btn_cerrar_sesion" />

    <Button
        android:id="@+id/btn_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/btn_proveedores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_api" />

    <Button
        android:id="@+id/btn_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_web"
        app:layout_constraintBottom_toBottomOf="@+id/btn_api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_api"
        app:layout_constraintTop_toTopOf="@+id/btn_api" />

    <Button
        android:id="@+id/btn_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/btn_productos"
        app:layout_constraintEnd_toStartOf="@+id/btn_web"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bienvenida" />
</androidx.constraintlayout.widget.ConstraintLayout>